Thu Dec 14 17:48:27 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix problem with recalc_maxweight() not being called before a
	  get_maxweight() in multimatch.cc if a node prunes at the top level,
	  since recalculate_w_max wasn't being checked at this point.
	  Introduced helper function getorrecalc_maxweight() to tidy this up.

	* Tidy up Asserts in common/netutils.h.

Thu Dec 14 17:11:17 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Adjusted todo.xml

Thu Dec 14 16:21:27 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed handling of OmDatabaseModifiedError in the API - it's
	  up to the users to know what to do.  Disabled quartzoverwrite2
	  as it's now inappropriate.
	
	* Added OmDatabase::reopen() to help them do so.

	* Adjusted todo.xml

Thu Dec 14 14:38:39 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added another quoting regression test.

Thu Dec 14 14:36:53 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed the quoting _again_, since it broke with backslashes.

Thu Dec 14 12:49:58 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix problems with recalculation of maxweight in postlists, causing
	  AssertParanoid at multimatch.cc:393.  When a prune was happening,
	  recalc_maxweight flag was not always being set, because some
	  {next,skip_to}_handling_prune() methods weren't being passed the
	  matcher, and a default argument of 0 was being used.  I've now
	  removed the default argument and pass the matcher always.

	  Sometimes the recalc could perhaps be avoided, but this is
	  certainly safer for now.

Thu Dec 14 12:30:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Sleepcat is now disabled by default.

	* Fixed a problem with tabs not being quoted in the remote case.  All
	  control characters are now quoted.  Incremented the protocol ver
	  number.

Thu Dec 14 11:54:17 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
