@@ -318,7 +318,7 @@ class DBDatabase : public Database {
 	/** DBDatabase is a readonly database type, and thus this method is
 	 *  not supported: if called an exception will be thrown.
 	 */
-	void do_begin_session(om_timeout timeout) {
+	void do_begin_session() {
 	    throw OmUnimplementedError(
 		"DBDatabase::begin_session() not implemented: readonly database type");
 	}
