@@ -54,7 +54,7 @@ class NetworkDatabase : public Database {
 	/** NetworkDatabase is a readonly database type, and thus this method
 	 *  is not supported: if called an exception will be thrown.
 	 */
-	void do_begin_session(om_timeout timeout) {
+	void do_begin_session() {
 	    throw OmUnimplementedError(
 		"NetworkDatabase::begin_session() not implemented: readonly database type");
 	}
